P3_kubernetes-network-policies/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: network-demo
  labels:
    app: backend
    role: api
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
