P3_kubernetes-network-policies/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: network-demo
  labels:
    app: test
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 3600']
